# todo

./: pyproject.toml
app/: fabfile.py  fbone.conf  wsgi.py
app/app/: app.py  config.py  constants.py  decorators.py  filters.py  utils.py
app/app/api/: __init__.py  views.py
app/app/frontend/: __init__.py  forms.py  views.py
app/app/templates/: index.html
app/app/user/: __init__.py  forms.py  models.py  views.py
tests/units/test_app/: test_flask_blueprint.py
